--- a/css/index.css
+++ b/css/index.css
@@ -9,7 +9,7 @@ html,body {
 }
 body {
 	background:
-    #000000
+    #DCDCDC
    
     
 }
@@ -40,11 +40,11 @@ nav li a {
 
 nav li a:hover {
 	color: #48D1CC;
-main {
+main{
 text-align: center;
 }
 
-#home {
+#home{
 	font-size: 30px;
 	height:350px;
 	margin: 1px 1px 1px 1px;
